home slider css media

--- a/src/components/UI/DefaultSlider/DefaultSlider.sass
+++ b/src/components/UI/DefaultSlider/DefaultSlider.sass
@@ -1,3 +1,8 @@
+.default-slider__wrapper
+  display: none
+  +media-breakpoint-down(sm)
+    display: block
+  
 .default-slider
   .slick-track
     display: flex !important
