--- a/src/components/Pages/Home/HomeMain/MainSlider/mainslider.sass
+++ b/src/components/Pages/Home/HomeMain/MainSlider/mainslider.sass
@@ -1,3 +1,9 @@
+.custom-slider
+  display: block
+  +media-breakpoint-down(sm)
+    display: none
+  
+  
 .test-slider--wrapper
   overflow: hidden
   position: relative
