--- a/src/components/Pages/Home/HomeMain/MainSlider/mainslider.sass
+++ b/src/components/Pages/Home/HomeMain/MainSlider/mainslider.sass
@@ -1,7 +1,7 @@
-.custom-slider
-  display: block
-  +media-breakpoint-down(sm)
-    display: none
+// .custom-slider
+//   display: block
+//   +media-breakpoint-down(sm)
+//     display: none
   
   
 .test-slider--wrapper
