--- a/src/components/UI/DefaultSlider/DefaultSlider.sass
+++ b/src/components/UI/DefaultSlider/DefaultSlider.sass
@@ -1,7 +1,7 @@
-.default-slider__wrapper
-  display: none
-  +media-breakpoint-down(sm)
-    display: block
+// .default-slider__wrapper
+//   display: none
+//   +media-breakpoint-down(sm)
+//     display: block
   
 .default-slider
   .slick-track
