--- a/src/styles/config.sass
+++ b/src/styles/config.sass
@@ -20,6 +20,6 @@ $page-wrapper: 1920px
 		font-style: $fstyle
 		font-weight: $fweight
 		src: local($fname), url($furl) format('woff')
-		// font-display: swap // Uncomment to initially display system fonts
+		font-display: swap // Uncomment to initially display system fonts
 @include font('Gilroy-example', normal, 500, '../fonts/gilroy/Gilroy-Medium.woff2')
 @include font('Gilroy-example', normal, 600, '../fonts/gilroy/Gilroy-Semibold.woff2')
