--- a/src/components/Pages/Home/Home.sass
+++ b/src/components/Pages/Home/Home.sass
@@ -4,4 +4,14 @@
 @import './HomeServices/HomeServices'
 @import './TestSliderHome/TestSliderHome'
 
+.home-video__container
+  display: block
+  +media-breakpoint-down(sm)
+    display: none
+
+.home-quote__container
+  display: block
+  +media-breakpoint-down(sm)
+    display: none
+
   
