--- a/src/components/Pages/Home/HomeMain/homemain.sass
+++ b/src/components/Pages/Home/HomeMain/homemain.sass
@@ -28,4 +28,15 @@
         line-height: 24px
     +media-breakpoint-down(sm)
       padding: 0 6vw
+
+
+.mobile-slider__container
+  display: none
+  +media-breakpoint-down(sm)
+    display: block
+
+.desctop-slider__container
+  display: block
+  +media-breakpoint-down(sm)
+    display: none
       
